# k8s-cluster-experimentation

./: .gitignore  README.md  label-studio.tf  milvus.tf  minio.yaml  pyproject.toml  secrets.tf  values.yaml  variables.tf  velero.tf
